--- a/actuallyhelpfulaccountant-2/src/app/About/about.page.html
+++ b/actuallyhelpfulaccountant-2/src/app/About/about.page.html
@@ -70,9 +70,11 @@
 
 </div>
 
-<div style="flex-wrap: nowrap; display:flex; justify-content: center;">
-<div style="background-color: var(--Color4L); margin: 2rem; padding: 2rem; 	border-radius: 8px; box-shadow: 8px 8px 8px #3131315e;">
-<h1> How it all began</h1>
+<div style="flex-wrap: wrap; display:flex; justify-content: center;">
+<div style="background-image: url(/assets/images/beginning.png); background-repeat: no-repeat; background-size: cover; margin: 2rem; border-radius: 8px; border: 2px solid black; width: 100%;">
+<div style="background: linear-gradient(20deg, rgba(255, 255, 255, 0.658), rgb(255, 255, 255)); padding: 2rem; border-radius: 8px; background-size: cover;">
+  <div style="margin: 1rem; padding: 2px;">
+  <h1> How it all began</h1>
 <br>
 <h2> Modern accounting with a personal mission </h2>
 <br>
@@ -88,9 +90,13 @@
 <br>
 <p>Smart, passionate business owners were being underserved — or ignored — by the accounting industry.</p>
 </div>
+</div>
+</div>
 
-<div style="background-color: var(--Color4L); margin: 2rem; padding: 2rem; 	border-radius: 8px; box-shadow: 8px 8px 8px #3131315e;">
-<h1> The firm I wish existed </h1>
+<div style="background-image: url(/assets/images/groupwork.png); background-repeat: no-repeat; background-size: cover; margin: 2rem; border-radius: 8px; border: 2px solid black; width: 100%;">
+<div style="background: linear-gradient(20deg, rgba(255, 255, 255, 0.658), rgb(255, 255, 255)); padding: 2rem; border-radius: 8px; background-size: cover;">
+  <div style="margin: 1rem; padding: 2px;">
+  <h1> The firm I wish existed </h1>
 <br>
 <h2> Modern accounting with a personal mission </h2>
 <br>
@@ -112,6 +118,8 @@
      welcome. You’ve found you person </p>
 <br>
  <button class="button1"> Lets work together </button>
+</div>
+</div>
 </div>
 </div>
 
