--- a/actuallyhelpfulaccountant-2/src/app/contact/contact.component.html
+++ b/actuallyhelpfulaccountant-2/src/app/contact/contact.component.html
@@ -1,5 +1,10 @@
 <div class="pagepadding" style="height: 100%;">
-<div style="display: flex;">
+<div class="center-img">
+<div style="width: 400px; margin:1rem;"> 
+ <app-cpagraphics [graphics]="graphics.newmessage"></app-cpagraphics>
+</div>
+</div>
+<!-- <div style="display: flex;">
     <div style="width:30%;">
 <img src="assets/images/planning.webp" style="width:100%;">
 </div>
@@ -13,6 +18,7 @@
 <h1>Email Address</h1>
 <h3>email us “Consultation” to get started!</h3>
 </div>
-</div>
+</div>  -->
+ <app-contact></app-contact>
     <app-footer></app-footer>
 </div>
