--- a/actuallyhelpfulaccountant-2/src/app/services/services.html
+++ b/actuallyhelpfulaccountant-2/src/app/services/services.html
@@ -32,35 +32,10 @@
           </div>
   </div>
 
-
-
-<!-- <div style="display: flex; justify-content: space-around; margin-top: 6rem; margin-left: 4rem; margin-right: 4rem;">
-
-<div>
-<img src="assets/images/teamwork.webp" style="width:100%">
-</div>
-
-<div style="margin: 2rem;">
-<h3>Monthly Accounting & Bookkeeping</h3>
-<p>For business owners who want peace of mind — and clean, clear</p>
-<br>
-<p>We handle the numbers so you can focus on running your business. From reconciliations 
-  to reports, you'll know exactly where your money is going — and we’ll explain it in a 
-  way that actually makes sense.</p>
-<br>
-  <p>Bank + credit card reconciliations</p>
-  <p>Financial statements (P&L, Balance Sheet, etc.)</p>
-  <p>Monthly review & check-in</p>
-  <p>Unlimited email support</p>
-  <p>Optional: payroll, sales tax, or cleanup add-ons</p>
-</div>
-</div> -->
-
-
-
 <div style="display: flex; justify-content: space-around; margin-top: 6rem; margin-left: 4rem; margin-right: 4rem;">
-<div>
-<div style="margin: 0.5rem;">
+  <div style="margin-top: 6rem;">
+<div style="border-radius: 8px; border: 2px solid black;">
+<div style="margin: 0.5rem; margin-right: 2rem;">
   <h2>Tax Planning & Strategy</h2>
 <h3>No more guessing — or being surprise</h3>
 <p>We look ahead so you don’t have to panic later. With proactive planning, we help you 
@@ -72,12 +47,13 @@
 </div>
 
 <div>
-<img src="assets/images/keybord-n-calc.webp" style="width:100%">
+<img src="assets/images/keybord-n-calc.webp" style="width:100%; margin-bottom: -4px;">
 </div>
 </div>
+  </div>
 
-<div style="margin-top: 6rem; margin-left: 4rem; margin-right: 4rem;">
-
+<div style="margin-top: 9rem; margin-left:2rem;">
+<div style="border-radius: 8px; border: 2px solid black;">
   <div>
 <img src="assets/images/working.webp" style="width:100%">
 </div>
@@ -95,13 +71,20 @@
 </div>
 </div>
 </div>
+</div>
 
 
 <div style="display: flex; justify-content: space-around; margin-top: 6rem; margin-left: 4rem; margin-right: 4rem;">
 
-<div>
-<img src="assets/images/meeting.webp" style="width:100%">
+  <div style="margin-top: 16px;">
+<!-- <div style="width:20%;">
+   <app-cpagraphics [graphics]="graphics.sales"></app-cpagraphics>
+  </div> -->
+   <div>
+<img src="assets/images/meeting.webp" style="width:100%;">
 </div>
+</div>
+
 
 <div style="margin: 2rem;">
 <h2>Cleanup Projects (For when your books are a bit of a mess — no)</h2>
