--- a/actuallyhelpfulaccountant-2/src/app/About/about.page.html
+++ b/actuallyhelpfulaccountant-2/src/app/About/about.page.html
@@ -117,7 +117,7 @@
      and sees the big picture of your business — 
      welcome. You’ve found you person </p>
 <br>
- <button class="button1"> Lets work together </button>
+ <button class="button1" (click)="routeToContactUs()"> Lets work together </button>
 </div>
 </div>
 </div>
