--- a/actuallyhelpfulaccountant-2/src/app/FAQS/faqs.page.html
+++ b/actuallyhelpfulaccountant-2/src/app/FAQS/faqs.page.html
@@ -1,9 +1,9 @@
 <div class="pagepadding" style="height: 100%;">
 
-<h1>Frequently Asked Questions (FAQs)</h1>
-
+<div class="section">
+  <h1>Frequently Asked Questions (FAQs)</h1>
   <app-dropdown></app-dropdown>
-
+</div>
   <app-footer></app-footer>
 
 </div>
