--- a/actuallyhelpfulaccountant-2/src/app/contact/contact.component.html
+++ b/actuallyhelpfulaccountant-2/src/app/contact/contact.component.html
@@ -1,4 +1,5 @@
 <div class="pagepadding" style="height: 100%;">
+    <div class="section">
 <div class="center-img">
 <div style="width: 400px; margin:1rem;"> 
  <app-cpagraphics [graphics]="graphics.newmessage"></app-cpagraphics>
@@ -20,5 +21,6 @@
 </div>
 </div>  -->
  <app-contact></app-contact>
+ </div>
     <app-footer></app-footer>
 </div>
