--- a/actuallyhelpfulaccountant-2/src/app/home/home.page.html
+++ b/actuallyhelpfulaccountant-2/src/app/home/home.page.html
@@ -16,7 +16,7 @@
         <div class="contentmargin"></div>
          <div class="contentmargin"></div>
           <div class="contentmargin"></div>
-        <button class="button1"> Book a Free Consult</button>
+        <button class="button1" (click)="routeToContactUs()">Book a Free Consult</button>
 </div>
 
 <app-cpagraphics style="width:45%;" [graphics]="graphics.herographic"></app-cpagraphics>
@@ -82,7 +82,7 @@ to Make Life Easy</h1>
 </div>
 <div style="display: flex; margin-top: 16px;">
 
-   <button class="button1" style="margin-right: 8px;"> Learn More</button>
+   <button class="button1" style="margin-right: 8px;" (click)="routeToServices()"> Learn More</button>
    <app-cpagraphics style="width:100%;" [graphics]="graphics.plane"></app-cpagraphics>
 </div>
 
