COLOR PALETE update

--- a/actuallyhelpfulaccountant-2/src/global.scss
+++ b/actuallyhelpfulaccountant-2/src/global.scss
@@ -1,19 +1,19 @@
 
 :root {
 	// Color Pallet
-	--ColorL: #ACF0E1; // light color
-	--Color: #35AE93; // main color
-	--ColorD: #35AE93; // main color darker
+	--Color2L: #FFD9CA; // light color
+	--Color2: #E97446; // main color
+	--Color2D: #5B2C1A; // main color darker
 	--ColorOpposite: black; // opposite color
 
-	--Color2L: #F3F0E9; // secondary color light
-	--Color2: #FFD700; // secondary color
-	--Color2D: #917800; // secondary color darker
+	--Color3L: #FFCDF0; // secondary color light
+	--Color3: #A37696; // secondary color
+	--Color3D: #624359; // secondary color darker
 	--Color2Opposite: black; // opposite color
 
-	--Color3L: #FABDAB; // third color light
-	--Color3: #aa6d5b; // third color
-	--Color3D: #5e2f20; // third color darker
+	--ColorL: #DDEFFF; // third color light
+	--Color: #9AB8D2; // third color
+	--ColorD: #2C2662; // third color darker
 	--Color3Opposite: black; // opposite color
 
 	--Color4L: #F2F2F2; // third color light
