styling ajustments button hover and footer colors

--- a/actuallyhelpfulaccountant-2/src/app/footer/footer.component.scss
+++ b/actuallyhelpfulaccountant-2/src/app/footer/footer.component.scss
@@ -1,7 +1,7 @@
 /* CSS */
 .footer {
   position: relative;
-   background: var(--Color);
+   background: var(--ColorD);
   color: white;
   padding: 60px 20px 160px;
   overflow: hidden;
