--- a/actuallyhelpfulaccountant-2/src/global.scss
+++ b/actuallyhelpfulaccountant-2/src/global.scss
@@ -225,7 +225,7 @@ p, h3 {
 
   &:hover {
    position: relative;
-  background-color: #35AE93;
+  background-color: var(--Color2);
   color: white;
   font-size: 1.7rem;
   padding: 1.2rem;
